[package]
name = "slut" # Static Linear Unitful Tensors
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Static Linear Untiful Tensors. Library for Vectors and Matrices with Physical Dimensions. Basically `uom` but in a vector space."

[lib]
name = "slut" # Static Linear Unitful Tensors
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
