[package]
name = "slut" # Static Linear Unitful Tensors
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Static Linear Untiful Tensors. Library for Vectors and Matrices with Physical Dimensions. Basically `uom` but in a vector space."

[lib]
name = "slut" # Static Linear Unitful Tensors
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
